# local-private-llm

./: .env.example  .gitignore  CONTRIBUTING.md  DISTRIBUTE.md  LICENSE  PUBLISH_TO_GITHUB.md  README.md  RELEASE.md  index.html  package-lock.json  package.json  push-to-github.ps1  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
scripts/: build-windows.ps1  create-release-zip.ps1  generate-icons.cjs  make-logo-square.mjs  publish-release-with-gh.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: diagnostics.rs  gpu.rs  lib.rs  main.rs  mcp.rs  ollama.rs  provider.rs  storage.rs
src/components/: AboutModal.tsx  LogoPlaceholder.tsx
src/components/chat/: ChatLayout.tsx  ChatView.tsx  MessageBubble.tsx  ToolCards.tsx
src/components/diagnostics/: DiagnosticsPanel.tsx
src/components/models/: ModelLibraryModal.tsx
src/components/onboarding/: Onboarding.tsx
src/components/sidebar/: Sidebar.tsx
src/components/ui/: dialog.tsx  toast.tsx  toaster.tsx  use-toast.ts
src/lib/: about.ts  api.ts  constants.ts  defaultSystemPrompt.ts  modelCatalog.json  modelCatalog.ts  starterSuggestions.ts  toolLedger.test.ts  toolLedger.ts  toolPrompt.ts  utils.ts
src/types/: index.ts
tests/acceptance/: tool-truthfulness.md
